new: write cinematic to a datapack